# pandas-bot-sj

./: .gitignore  README.md  get-pip.py  main.py  pyproject.toml  test.ipynb
.tekton/: push.yaml
.tekton/tasks/: git-clone-task.yaml
