[project]
name = "pandas-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "seejune2",email = "106861640+seejune2@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "gradio (>=5.31.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pandas_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
